<resources>
    <string name="app_name">笔记本</string>

    <string name="picture">picture</string>
    <!--check-->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="delete">delete</string>
    <string name="tips">提示</string>
    <!--main-->
    <string name="add">新建</string>
    <string name="my_book">笔记本(结构化)</string>
    <string name="normal_book">笔记本</string>

</resources>
